BPER/DEVF/force-app/main/default/objects/CRM_IngaggioRetiEsterne__c/CRM_IngaggioRetiEsterne__c.object-meta.xml
<CustomObject>
    <label>Ingaggio Reti Esterne</label>
    <nameField>
        <displayFormat>IREX-{00000000}</displayFormat>
        <label>Ingaggio Reti Esterne</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ingaggi Reti Esterne</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>