BPER/DEVF/force-app/main/default/objects/CRM_IngaggioRetiEsterne__c/fields/CRM_AmbitoDiIngaggio__c.field-meta.xml
<CustomField>
    <fullName>CRM_AmbitoDiIngaggio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ambito di ingaggio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>