BPER/DEVF/force-app/main/default/objects/CRM_IngaggioRetiEsterne__c/fields/CRM_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CRM_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ingaggi Reti Esterne</relationshipLabel>
    <relationshipName>Ingaggi_Reti_Esterne</relationshipName>
    <type>Lookup</type>
</CustomField>