BPER/DEVF/force-app/main/default/objects/CRM_IngaggioRetiEsterne__c/fields/CRM_CodiceSegnalatore__c.field-meta.xml
<CustomField>
    <fullName>CRM_CodiceSegnalatore__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codice Segnalatore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>