BPER/DEVF/force-app/main/default/objects/CRM_IngaggioRetiEsterne__c/fields/CRM_Esito__c.field-meta.xml
<CustomField>
    <fullName>CRM_Esito__c</fullName>
    <label>Esito</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cliente interessato</fullName>
                <default>true</default>
                <label>Cliente interessato</label>
            </value>
            <value>
                <fullName>Da ricontattare</fullName>
            </value>
            <value>
                <fullName>Fissato appuntamento</fullName>
            </value>
            <value>
                <fullName>Prodotto venduto</fullName>
            </value>
            <value>
                <fullName>Prodotto non venduto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>