BPER/DEVF/force-app/main/default/objects/CRM_IngaggioRetiEsterne__c/fields/CRM_FilialeNDGBPER__c.field-meta.xml
<CustomField>
    <fullName>CRM_FilialeNDGBPER__c</fullName>
    <formula>CRM_NDG_Bper_Specchio__r.CRM_FilialeToDisplay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filiale NDG BPER</label>
    <type>Text</type>
</CustomField>