BPER/DEVF/force-app/main/default/objects/CRM_IngaggioRetiEsterne__c/fields/CRM_Motivo__c.field-meta.xml
<CustomField>
    <fullName>CRM_Motivo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>