BPER/DEVF/force-app/main/default/objects/CRM_IngaggioRetiEsterne__c/fields/CRM_NDG_Bper_Specchio__c.field-meta.xml
<CustomField>
    <fullName>CRM_NDG_Bper_Specchio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NDG Bper Specchio</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ingaggi Reti Esterne (NDG Bper Specchio)</relationshipLabel>
    <relationshipName>Ingaggi_Reti_Esterne1</relationshipName>
    <type>Lookup</type>
</CustomField>