BPER/DEVF/force-app/main/default/objects/CRM_IngaggioRetiEsterne__c/fields/CRM_NDGBPER__c.field-meta.xml
<CustomField>
    <fullName>CRM_NDGBPER__c</fullName>
    <formula>CRM_NDG_Bper_Specchio__r.CRM_NDG__c</formula>
    <label>NDG BPER</label>
    <type>Text</type>
</CustomField>