BPER/DEVF/force-app/main/default/objects/CRM_IngaggioRetiEsterne__c/fields/CRM_NomeNDGBPER__c.field-meta.xml
<CustomField>
    <fullName>CRM_NomeNDGBPER__c</fullName>
    <formula>CRM_NDG_Bper_Specchio__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome NDG BPER</label>
    <type>Text</type>
</CustomField>