BPER/DEVF/force-app/main/default/objects/CRM_IngaggioRetiEsterne__c/fields/CRM_Notes__c.field-meta.xml
<CustomField>
    <fullName>CRM_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>