BPER/DEVF/force-app/main/default/objects/CRM_IngaggioRetiEsterne__c/fields/CRM_ReferenteNDGBPER__c.field-meta.xml
<CustomField>
    <fullName>CRM_ReferenteNDGBPER__c</fullName>
    <formula>CRM_NDG_Bper_Specchio__r.CRM_ReferenteNameFormula__c</formula>
    <label>Referente NDG BPER</label>
    <type>Text</type>
</CustomField>