BPER/DEVF/force-app/main/default/objects/CRM_IngaggioRetiEsterne__c/recordTypes/Ingaggio_Agente.recordType-meta.xml
<RecordType>
    <fullName>Ingaggio_Agente</fullName>
    <active>true</active>
    <label>Ingaggio Agente</label>
</RecordType>