BPER/DEVF/force-app/main/default/objects/CRM_IngaggioRetiEsterne__c/recordTypes/Ingaggio_BPER.recordType-meta.xml
<RecordType>
    <fullName>Ingaggio_BPER</fullName>
    <active>true</active>
    <label>Ingaggio BPER</label>
</RecordType>